# Tf-lite-for-Segmentation

./: .gitignore  README  README.md
mac/: CMakeLists.txt  imageUtils.cpp  imageUtils.h
windows/: CMakeLists.txt  main.cpp
